gl33-master/src/test/deca/syntax/invalid/others/parentheseEnPlusPrintln2.deca
/*
Test sur l'ajout de plusieurs parenthèses au début de println

Attention : si le fichier est modifié, il faut le vérifier à nouveau et
copier la sortie dans src/test/deca/invalid/others/expected

*/

{
    println(("Hello");
}
